# rjit

./: .gitignore  Cargo.toml  tmp.cubin
benches/: optix.rs
src/: backend.rs  compiler.rs  ir.rs  iterators.rs  jit.rs  lib.rs  loop_record.rs  main.rs  reductions.rs  registry.rs  schedule.rs  test.rs  trace.rs  util.rs  var.rs
src/backend/: cuda.rs  info.rs  mod.rs
src/backend/cuda/: codegen.rs  compress.rs  cuda.rs  cuda_core.rs  mod.rs  params.rs  test.rs
src/backend/optix/: codegen.rs  mod.rs  optix.rs  optix_core.rs  test.rs
src/backend/snapshots/: cuda_test__backend__cuda__test__eval_scatter.snap  cuda_test__backend__cuda__test__gather_eval.snap  cuda_test__backend__cuda__test__index-2.snap  cuda_test__backend__cuda__test__index.snap  cuda_test__backend__cuda__test__index.snap.new  cuda_test__backend__cuda__test__load_add_f32-2.snap  cuda_test__backend__cuda__test__load_add_f32.snap  cuda_test__backend__cuda__test__load_add_f32.snap.new  (+14 more)
src/snapshots/: cuda_test__compiler__test__load_abs_store_f32.snap  cuda_test__compiler__test__load_add_store.snap  cuda_test__compiler__test__load_div_store_f32.snap  cuda_test__compiler__test__load_div_store_f64.snap  cuda_test__compiler__test__load_mod_store_f32.snap  cuda_test__compiler__test__load_mul_store_f32.snap  cuda_test__compiler__test__load_mul_store_f64.snap  cuda_test__compiler__test__load_neg_store_f32.snap  cuda_test__compiler__test__load_neg_store_u32.snap  cuda_test__compiler__test__load_not_store_bool.snap  cuda_test__compiler__test__load_sqrt_store_f32.snap  cuda_test__compiler__test__load_sqrt_store_f64.snap  cuda_test__compiler__test__load_sub_store_f32.snap  rjit__test__cos_f32.snap  rjit__test__exp2_f32.snap  rjit__test__log2_f32.snap  rjit__test__make_opaque.snap  rjit__test__opaque.snap  rjit__test__rcp_f32.snap  rjit__test__rsqrt_f32.snap  rjit__test__sin_f32.snap  rjit__trace__test__cos_f32.snap  rjit__trace__test__exp2_f32.snap  rjit__trace__test__log2_f32.snap  rjit__trace__test__make_opaque.snap  rjit__trace__test__opaque.snap  rjit__trace__test__rcp_f32.snap  rjit__trace__test__rsqrt_f32.snap  rjit__trace__test__sin_f32.snap
(+86 files in other folders)
