[package]
name = "cuda-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
cust = { git = "https://github.com/DoeringChristian/Rust-CUDA.git", branch = "cast-double-free" }
insta = "1.28.0"
itertools = "0.10.5"
rayon = "1.7.0"
smallvec = "1.10.0"
