[package]
name = "cuda-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
cust = { git = "https://github.com/DoeringChristian/Rust-CUDA.git", branch = "cast-double-free" }
itertools = "0.10.5"
log = "0.4.17"
parking_lot = "0.12.1"
pretty_env_logger = "0.4.0"
rayon = "1.7.0"
slotmap = "1.0.6"
smallvec = "1.10.0"

[dev-dependencies]
insta = { version = "1.28.0" }
rusty-hook = "0.11.2"

[profile.dev.packages.insta]
opt-level = 3

[profile.dev.packages.similar]
opt-level = 3


[hooks]
pre-commit = "cargo test"
