[package]
name = "cuda-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.0.2"
bytemuck = { version = "1.13.1", features = ["extern_crate_alloc"]}
itertools = "0.10.5"
log = "0.4.17"
once_cell = "1.17.1"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"]}
pretty_env_logger = "0.4.0"
rayon = "1.7.0"
slotmap = "1.0.6"
smallvec = "1.10.0"
thread_local = "1.1.7"
tracing-mutex = { version = "0.2.1", features = ["parkinglot"] }
paste = "1.0.12"
half = { version = "2.2.1", features = ["bytemuck"]}
approx = "0.5.1"
cuda-rs = { git = "https://github.com/DoeringChristian/cuda-rs.git" }
bytesize = "1.2.0"
libloading = "0.8.0"
thiserror = "1.0.40"

[dev-dependencies]
insta = { version = "1.28.0" }
rusty-hook = "0.11.2"

[profile.dev.packages.insta]
opt-level = 3

[profile.dev.packages.similar]
opt-level = 3


[hooks]
# pre-commit = "cargo test -- --test-threads=1"
